--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,3 +1,6 @@
 {{/* Place Logo Graphic or Text Here */}}
 
-<img src="/cc410/images/core-logo-on-purple.svg">
+Logo
+
+`/layouts/partials/logo.html`
+
