--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,5 @@
-CIS 308: C Language Lab
+{{/* Place Logo Graphic or Text Here */}}
+<a id="logo" href="{{ .Site.Home.RelPermalink | default ("/" | relLangURL) }}">
+  CIS 308: C Language Lab
+</a>
+
